--- a/assets/css/contactformstyle.css
+++ b/assets/css/contactformstyle.css
@@ -2,9 +2,11 @@
 body{
     width:100%;
     margin:auto;
-    padding:50px;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
+    padding:100px 0px;
+    font-size: 10px;
+    font-style: Verdana, Tahoma, sans-serif;
 }
 
 .headerContainer {
@@ -25,7 +27,7 @@ body{
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
 }
 
 .nav {
@@ -41,15 +43,10 @@ li{
     padding-top: 30px;
 }
 
+
 /* ===========================================================
    ===================== Body style ==========================
    =========================================================== */ 
-body {
-    padding:100px 0px;
-    font-size: 14px;
-    font-style: Verdana, Tahoma, sans-serif;
-}
-
 h2 {
     margin-bottom: 20px;
     color: #474E69;
@@ -62,12 +59,12 @@ h2 {
    * {
     box-sizing: border-box;
   }
-  
+
   /* Create two equal columns that floats next to each other */
   .column {
+      margin-left: 10px;
     float: left;
-    width: 50%;
-    padding: 10px;
+    width: 48.9%;
     height: 300px; /* Should be removed. Only for demonstration */
   }
   
@@ -79,75 +76,11 @@ h2 {
   }
   
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 800px) {
     .column {
       width: 100%;
     }
   }
-   /* ========================================================
-   ===================== Contact form ========================
-   =========================================================== */
-
-   input, textarea {
-    padding: 10px;
-    border: 1px solid #E5E5E5;
-    width: 200px;
-    color: #999999;
-    box-shadow: rgba(0, 0 ,0, 0.2) 0px 0px 8px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-}
-
-textarea {
-    width: 600px;
-    height: 150px;
-    max-width: 600px;
-    line-height: 18px;
-}
-
-input:hover, textarea:hover,
-input:focus, textarea:focus {
-    border-color: 1px solid #C9C9C9;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 8px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
-}
-
-.form label {
-    margin-left: 10px;
-    color: #999999;
-}
-
-
-.form .userName {
-    padding-right: 45px;
-    padding-left: 100px
-}
-
-.form .email {
-    padding-right: 50px;
-    padding-left: 50px
-}
-
-h2 {
-    column-span: all;
-    column-width: 45%;
-}
-
-
-      /* ========================================================
-   ===================== Submit button ========================
-   =========================================================== */
-
-   .submit input {
-       width: 80%;
-       height: 40px;
-       background-color: #474E96;
-       color: #FFF;
-       border-radius: 3px;
-       -moz-border-radius: 3px;
-       -webkit-border-radius: 3px;
-   }
 
       /* ========================================================
    ===================== Social Media Button(s) ========================
@@ -155,7 +88,7 @@ h2 {
    .fa {
     padding: 20px;
     font-size: 30px;
-    width: 90%;
+    width: 100%;
     text-align: center;
     text-decoration: none;
     margin: 5px 2px;
@@ -171,3 +104,10 @@ h2 {
   }
 
   
+/* ====================== CONTACT FORM BOOTSTRAP =================================
+=================================================================================
+=================================================================================*/
+#contact .card:hover i,#contact .card:hover h4{
+    color: #87d37c;
+    margin-left: 0px;
+}
