--- a/assets/css/admin_login.css
+++ b/assets/css/admin_login.css
@@ -67,3 +67,30 @@ html{
   color: white;
   text-decoration: none;
 }
+
+
+.goToIndexBtn {
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+	background-color:#2dabf9;
+	border-radius:3px;
+	border:1px solid #0b0e07;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+}
+.goToIndexBtn:hover {
+	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+	background-color:#0688fa;
+}
+.goToIndexBtn:active {
+	position:relative;
+	top:1px;
+}
+
+        
