--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,32 @@ li{
 }
 
 
+/* BUTTON DISABLE */
+.buttonBCEXCLUSIVES {
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:linear-gradient(to bottom, #2dabf9 5%, #1a4af7 100%);
+	background-color:#2dabf9;
+	border-radius:3px;
+	border:1px solid #13819a;
+	display:inline-block;
+	cursor:not-allowed;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+}
+.buttonBCEXCLUSIVES:hover {
+	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+	background-color:#0688fa;
+}
+.buttonBCEXCLUSIVES:disabled {
+	position:relative;
+	top:1px;
+}
+
+
 #goTopButton {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
@@ -76,7 +102,7 @@ li{
 	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
-
+/* 
 #booking {
 	font-family: 'Montserrat', sans-serif;
 	background-image: url('../img/background.jpg');
@@ -226,4 +252,4 @@ li{
 	display: block;
 	width: 100%;
 	text-transform: capitalize;
-}
+} */
