--- a/assets/css/AdminPage.css
+++ b/assets/css/AdminPage.css
@@ -9,6 +9,50 @@ input[type=submit] {
   cursor: pointer;
   width: 500px;
 }
+input[type=text], select {
+   width: 48%;
+   padding: 12px 20px;
+   margin: 8px 0;
+   display: inline-block;
+   border: 1px solid #ccc;
+   border-radius: 4px;
+   box-sizing: border-box;
+ }
+textarea#styled {
+	width: 49%;
+	height: 120px;
+	border: 3px solid #cccccc;
+	padding: 5px;
+	font-family: Tahoma, sans-serif;
+	background-image: url(bg.gif);
+	background-position: bottom right;
+	background-repeat: no-repeat;
+}
+
+
+.goToIndexBtn {
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+	background-color:#2dabf9;
+	border-radius:3px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+}
+.goToIndexBtn:hover {
+	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+	background-color:#0688fa;
+}
+.goToIndexBtn:active {
+	position:relative;
+	top:1px;
+}
+
 
 /* ==============================================================================================
 ============================== CUSTOM COMBO BOX =================================================
