--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,17 @@ li{
     border-radius: 10px; /* Rounded corners */
     font-size: 18px; /* Increase font size */
   }
+
+  input[type=text], select {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+  }
+  
   
   #goTopButton:hover {
     background-color: #555; /* Add a dark-grey background on hover */
